# crypto-tracker

./: pyproject.toml
backend/src/: config.py  http_client.py  init.py  main.py  router.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CryptocurrencyCard.jsx
