[project]
name = "crypto-app"
version = "0.1.0"
description = ""
authors = [
    {name = "n1ghtmare-dev",email = "oboev3691@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "async-lru (>=2.0.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
reportGeneralTypeIssues = false
